--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "MAK2StarCommon/FlUrl/Flurl"]
 	path = MAK2StarCommon/FlUrl/Flurl
-	url = https://github.com/tmenier/Flurl.git
+	url = https://github.com/dberlin/Flurl.git
