--- a/MAK2StarGrillCloudConnected/MAK2StarGrillCloudConnected.csproj
+++ b/MAK2StarGrillCloudConnected/MAK2StarGrillCloudConnected.csproj
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-    <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
-    <Import Project="..\ExtraTasks.targets" />
+    <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')"/>
+    <Import Project="..\ExtraTasks.targets"/>
     <PropertyGroup>
         <!--  <Nullable>enable</Nullable>
         <LangVersion>8.0</LangVersion> -->
@@ -39,37 +39,37 @@
     </PropertyGroup>
     <ItemGroup>
         <Reference Include="Crestron.DeviceDrivers.API, Version=7.0.0.12, Culture=neutral, PublicKeyToken=null">
-          <HintPath>..\..\..\..\Downloads\ccd7\SDK\Libraries\Crestron.DeviceDrivers.API.dll</HintPath>
+            <HintPath>..\..\..\..\Downloads\ccd7\SDK\Libraries\Crestron.DeviceDrivers.API.dll</HintPath>
         </Reference>
         <Reference Include="RADCommon, Version=7.0.0.12, Culture=neutral, PublicKeyToken=null">
-          <HintPath>..\..\..\..\Downloads\ccd7\SDK\Libraries\RADCommon.dll</HintPath>
+            <HintPath>..\..\..\..\Downloads\ccd7\SDK\Libraries\RADCommon.dll</HintPath>
         </Reference>
-        <Reference Include="System" />
-        <Reference Include="System.Core" />
-        <Reference Include="System.Numerics" />
-        <Reference Include="System.Runtime" />
-        <Reference Include="System.Runtime.InteropServices" />
-        <Reference Include="System.Runtime.Serialization" />
-        <Reference Include="System.Threading.Thread" />
-        <Reference Include="System.Xml.Linq" />
-        <Reference Include="System.Data.DataSetExtensions" />
-        <Reference Include="Microsoft.CSharp" />
-        <Reference Include="System.Data" />
-        <Reference Include="System.Net.Http" />
-        <Reference Include="System.Xml" />
+        <Reference Include="System"/>
+        <Reference Include="System.Core"/>
+        <Reference Include="System.Numerics"/>
+        <Reference Include="System.Runtime"/>
+        <Reference Include="System.Runtime.InteropServices"/>
+        <Reference Include="System.Runtime.Serialization"/>
+        <Reference Include="System.Threading.Thread"/>
+        <Reference Include="System.Xml.Linq"/>
+        <Reference Include="System.Data.DataSetExtensions"/>
+        <Reference Include="Microsoft.CSharp"/>
+        <Reference Include="System.Data"/>
+        <Reference Include="System.Net.Http"/>
+        <Reference Include="System.Xml"/>
     </ItemGroup>
     <ItemGroup>
-        <Compile Include="GlobalSuppressions.cs" />
-        <Compile Include="MAK2StarGrillCloudConnectedDevice.cs" />
-        <Compile Include="MAK2StarGrillTransport.cs" />
-        <Compile Include="MAKPlatformProtocol.cs" />
-        <Compile Include="Properties\AssemblyInfo.cs" />
+        <Compile Include="GlobalSuppressions.cs"/>
+        <Compile Include="MAK2StarGrillCloudConnectedDevice.cs"/>
+        <Compile Include="MAK2StarGrillTransport.cs"/>
+        <Compile Include="MAKPlatformProtocol.cs"/>
+        <Compile Include="Properties\AssemblyInfo.cs"/>
     </ItemGroup>
     <ItemGroup>
         <Content Include="IncludeInPkg\Translations\en-US.json">
             <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
         </Content>
-        <EmbeddedResource Include="MAK2StarGrillCloudConnected.json" />
+        <EmbeddedResource Include="MAK2StarGrillCloudConnected.json"/>
     </ItemGroup>
     <ItemGroup>
         <Content Include="IncludeInPkg\UiDefinitions\UiDefinition.xml">
@@ -77,7 +77,7 @@
         </Content>
     </ItemGroup>
     <ItemGroup>
-        <AdditionalFiles Include="stylecop.json" />
+        <AdditionalFiles Include="stylecop.json"/>
     </ItemGroup>
     <ItemGroup>
         <None Include="..\.editorconfig">
@@ -94,12 +94,12 @@
             <Name>MAK2StarGrillSingleDevice</Name>
         </ProjectReference>
     </ItemGroup>
-    <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+    <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets"/>
     <PropertyGroup>
         <PostBuildEvent>"c:\users\Daniel Berlin\Downloads\ccd7\SDK\ManifestUtil\ManifestUtil.exe" "$(TargetPath)"</PostBuildEvent>
     </PropertyGroup>
     <Target Name="BeforeBuild">
-        <ReplaceFileText InputFilename="MAK2StarGrillCloudConnected.json" OutputFilename="MAK2StarGrillCloudConnected.json" MatchExpression="(VersionDate&quot;.*?&quot;)(.*?)(&quot;)" ReplacementText="$1 $(CurrentDate) $3" />
+        <UpdateVersionDate InputFilename="MAK2StarGrillCloudConnected.json" OutputFilename="MAK2StarGrillCloudConnected.json" FieldName="VersionDate"/>
         <IncrementVersion InputFilename="MAK2StarGrillCloudConnected.json" OutputFilename="MAK2StarGrillCloudConnected.json" FieldName="DriverVersion"/>
     </Target>
 </Project>
